@@ -1,6 +1,7 @@
 ChangeLog file for Endian libencloud
 
 next:
+	- sece: make sure valid=false is always caught as CodeServerLicenseInvalid
 
 libencloud 0.7.6 (28/01/2015)
 	- setup: fix possible crashes upon error due to double delete;
